workshop/plans/guestbook-frontdoor.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
#  annotations:
#    kubernetes.io/ingress.class: istio
  name: guestbook-ingress
spec:
  rules:
    - host: guestbook.iw-iks-demo.au-syd.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: guestbook
              servicePort: 80
